Ajuste para considerar apenas pagamentos em atraso
