# models/LatePayment.js
@@ -2,9 +2,9 @@ const { Model, DataTypes } = require('sequelize');
 const sequelize = require('../config/database');
 const Person = require('./Person');
 
-class MonthlyPayment extends Model {}
+class LatePayment extends Model {}
 
-MonthlyPayment.init(
+LatePayment.init(
   {
     personId: {
       type: DataTypes.INTEGER,
@@ -16,16 +16,26 @@ MonthlyPayment.init(
     },
     year: { type: DataTypes.INTEGER, allowNull: false },
     month: { type: DataTypes.INTEGER, allowNull: false },
-    paidOnTime: { type: DataTypes.BOOLEAN, allowNull: false, defaultValue: false },
     paidAt: { type: DataTypes.DATE, allowNull: true },
+    notes: { type: DataTypes.STRING(255), allowNull: true },
   },
-  { sequelize, modelName: 'MonthlyPayment', tableName: 'monthly_payments' },
+  {
+    sequelize,
+    modelName: 'LatePayment',
+    tableName: 'late_payments',
+    indexes: [
+      {
+        unique: true,
+        fields: ['personId', 'year', 'month'],
+      },
+    ],
+  },
 );
 
 try {
-  MonthlyPayment.belongsTo(Person, { foreignKey: 'personId' });
+  LatePayment.belongsTo(Person, { foreignKey: 'personId' });
 } catch (e) {
   // Ignore association errors in test/mock environments where Person may be mocked
 }
 
-module.exports = MonthlyPayment;
+module.exports = LatePayment;
